# minimal

./: .travis.yml  CMakeLists.txt  README.md  build_minimal.bat  loggedbuild_minimal.bat  minimal.cpp
